--- a/client/meetings.css
+++ b/client/meetings.css
@@ -61,7 +61,13 @@ body {
 .room_container {
     margin-right: 20px;
     max-height: 100%;
-    display: table;
+    display: table-column;
+}
+
+@-moz-document url-prefix() {
+   .room_container {
+      display: table;
+   }
 }
 
 .room_container:last-child {
